--- a/index.html
+++ b/index.html
@@ -370,26 +370,28 @@
       <br>
       <div class="container">
 
-        <div class="row" style="margin: auto; ">
-          <div class="col-lg-1 mr-auto text-center">
+        <div class="row" >
+
+          <div class="col-lg-4 mr-auto text-center">
             <i class="fa devicon-facebook-plain fa-3x mb-3 sr-contact"></i>
             <p>
               <a href="https://www.facebook.com/vinson.aiono" class="text-light">facebook</a>
             </p>
           </div>
-          <div class="col-lg-1 mr-auto text-center">
+          <div class="col-lg-4 mr-auto text-center">
             <i class="fa devicon-github-plain fa-3x mb-3 sr-contact"></i>
             <p>
               <a href="https://github.com/vinsonlaiono" class="text-light">GitHub</a>
             </p>
           </div>
-          <div class="col-lg-1 mr-auto text-center">
+          <div class="col-lg-4 mr-auto text-center">
             <i class="fa devicon-facebook-plain fa-3x mb-3 sr-contact"></i>
             <p>
               <a href="https://www.linkedin.com/in/vinsonaiono/" class="text-light">Linkedin</a>
             </p>
           </div>
         </div>
+      </div>
         
       </div>
     </div>
