added to projects section

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     </div>
     <div class="container-fluid p-0">
       <div class="row no-gutters popup-gallery">
-        <div class="col-lg-6 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="../techPortfolio/img/portfolio/fullsize/hoopfinder-1.PNG">
             <img class="img-fluid" src="../techPortfolio/img/portfolio/fullsize/hoopfinder-2.PNG" alt="">
             <div class="portfolio-box-caption">
@@ -294,7 +294,7 @@
             </div>
           </a>
         </div>
-        <div class="col-lg-6 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/seko-1.PNG">
             <img class="img-fluid" src="img/portfolio/fullsize/seko-2.PNG" alt="">
             <div class="portfolio-box-caption">
@@ -309,9 +309,9 @@
             </div>
           </a>
         </div>
-        <!-- <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/computer.jpg">
+            <img class="img-fluid" src="img/computer.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
@@ -323,7 +323,7 @@
               </div>
             </div>
           </a>
-        </div> -->
+        </div>
       </div>
     </div>
   </section>
