--- a/index.html
+++ b/index.html
@@ -372,22 +372,28 @@
 
         <div class="row" >
 
-          <div class="col-lg-4 mr-auto text-center">
+          <div class="col-lg-3 mr-auto text-center">
             <i class="fa devicon-facebook-plain fa-3x mb-3 sr-contact"></i>
             <p>
               <a href="https://www.facebook.com/vinson.aiono" class="text-light">facebook</a>
             </p>
           </div>
-          <div class="col-lg-4 mr-auto text-center">
+          <div class="col-lg-3 mr-auto text-center">
             <i class="fa devicon-github-plain fa-3x mb-3 sr-contact"></i>
             <p>
               <a href="https://github.com/vinsonlaiono" class="text-light">GitHub</a>
             </p>
           </div>
-          <div class="col-lg-4 mr-auto text-center">
-            <i class="fa devicon-facebook-plain fa-3x mb-3 sr-contact"></i>
+          <div class="col-lg-3 mr-auto text-center">
+            <i class="fa fa-linkedin-square fa-3x mb-3 sr-contact"></i>
             <p>
               <a href="https://www.linkedin.com/in/vinsonaiono/" class="text-light">Linkedin</a>
+            </p>
+          </div>
+          <div class="col-lg-3 mr-auto text-center">
+            <i class="fa fa-envelope-square fa-3x mb-3 sr-contact"></i>
+            <p>
+              <a href="" class="text-light">Email</a>
             </p>
           </div>
         </div>
