corrected grammer errors in about me section

--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
           <div id="hexagon"></div>
           <hr class="light my-4">
           <p class="text-faded mb-4">I was born on a small island in the South Pacific and came to America to look for a better opprotunity. I have
-            found a great passion in technology. I specialize in createing software that is catered to any audience including
-            individuals, small-business and enterprise level corporatioins. My passion comes from know that I can build anything
-            I can ever imagine and can help bring other ideas into a reality
+            found a great passion in technology. I specialize in creating software that is catered to any audience including
+            individuals, small-business and enterprise level corporations. My passion comes from knowing that I can build anything
+            I could ever imagine and can help bring other's ideas into a reality
           </p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Skills</a>
         </div>
