--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
 
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=7">
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Software Engineer, fron-end developer">
+  <meta name="author" content="Vinson Aiono">
 
   <title>Vinson Aiono</title>
   <link rel="stylesheet" href="css/creative.css">
@@ -336,19 +339,20 @@
       <hr class="my-4">
       <div class="row">
         <div class="col-lg-6 mx-auto text-center" style="margin-top: 50px;">
-          <p class="mb-20">Ready to start your next project with me? That's great! Send me an email or leave me a message and I will get back
-            to you as soon as possible!</p>
+          <p class="mb-20">Ready to start your next project with me? Send me an email or leave me a message and I will get back
+            to you as soon as possible</p>
 
         </div>
         <div class="col form-control " style="width: 400px;">
-          <form>
+          <script src="https://usebasin.com/f/fe80485df46c/ahoy.js" async defer></script>
+            <form accept-charset="UTF-8" action="https://usebasin.com/f/fe80485df46c" method="POST">
             <div class="form-group">
               <label for="exampleInputEmail1">Name</label>
-              <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Name">
+              <input type="text" class="form-control" id="exampleInputEmail1">
             </div>
             <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <label for="email-address">Email address</label>
+              <input type="email" class="form-control" id="email" name="name" aria-describedby="emailHelp" >
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Message</label>
