added more details to impove scrolling

--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 
           <p class="text-faded mb-5">"Every once in a while, a new technology, an old problem, and a big idea turn into an innovation."</p>
           <p class="text-faded mb-5">- Dean Kamen</p>
-          <!-- <a class="btn btn-outline-secondary btn-xl js-scroll-trigger" href="#about">Find Out More</a> -->
-          <!-- <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">About me</a> -->
+          <!-- <a class="btn btn-outline-secondary btn-xl js-scroll-trigger" href="#about">Find Out More</a> 
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">About me</a>  -->
         </div>
       </div>
     </div>
@@ -174,7 +174,7 @@
           <h2 class="section-heading text-white">Learn about me</h2>
           <div id="hexagon"></div>
           <hr class="light my-4">
-          <p class="text-faded mb-4">I was born on a small island in the South Pacific and came to America to look for a better opprotunity. I have
+          <p class="text-faded mb-4">I was born on a small island in the South Pacific and came to America to look for a better opportunity. I have
             found a great passion in technology. I specialize in creating software that is catered to any audience including
             individuals, small-business and enterprise level corporations. My passion comes from knowing that I can build
             anything I could ever imagine and can help bring other's ideas into a reality
@@ -331,11 +331,18 @@
       </div>
     </div>
   </section>
-
-
+  
+  
 
   <section id="contact">
     <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+            <a class="navbar-brand js-scroll-trigger"  href="#page-top">
+                <i class="fa fa-3x fa-angle-double-up text-primary mb-3"></i>
+              </a>
+              </div>
+            </div>
       <h2 class="section-heading text-center">Let's Get In Touch!</h2>
       <hr class="my-4">
       <div class="row">
@@ -346,6 +353,7 @@
         </div>
         <div class="col form-control " style="width: 400px;">
           <script src="https://usebasin.com/f/fe80485df46c/ahoy.js" async defer></script>
+          <script src="https://www.google.com/recaptcha/api.js" async defer></script>
           <form accept-charset="UTF-8" action="https://usebasin.com/f/fe80485df46c" method="POST">
             <div class="form-group">
               <label for="exampleInputEmail1">Name</label>
@@ -363,6 +371,7 @@
           </form>
         </div>
       </div>
+      
       <script>
         $.ajax({
           url: "https://usebasin.com/f/fe80485df46c.json",
