--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://drive.google.com/open?id=16Fr5FbLLs30STlBr4xJcStlgUX6tGXzX">Resume</a>
+            <a class="nav-link js-scroll-trigger" href="https://drive.google.com/open?id=1Gly6TAHGFB3tpHGCmcn6GZFhZU1uqCDf">Resume</a>
           </li>
         </ul>
       </div>
@@ -284,8 +284,8 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters popup-gallery">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="../techPortfolio/img/portfolio/fullsize/hoopfinder-1.PNG">
-            <img class="img-fluid" src="../techPortfolio/img/portfolio/fullsize/hoopfinder-2.PNG" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/hoopfinder-1.PNG">
+            <img class="img-fluid" src="img/portfolio/fullsize/hoopfinder-2.PNG" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
@@ -331,18 +331,18 @@
       </div>
     </div>
   </section>
-  
-  
+
+
 
   <section id="contact">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-            <a class="navbar-brand js-scroll-trigger"  href="#page-top">
-                <i class="fa fa-3x fa-angle-double-up text-primary mb-3"></i>
-              </a>
-              </div>
-            </div>
+          <a class="navbar-brand js-scroll-trigger" href="#page-top">
+            <i class="fa fa-3x fa-angle-double-up text-primary mb-3"></i>
+          </a>
+        </div>
+      </div>
       <h2 class="section-heading text-center">Let's Get In Touch!</h2>
       <hr class="my-4">
       <div class="row">
@@ -371,7 +371,7 @@
           </form>
         </div>
       </div>
-      
+
       <script>
         $.ajax({
           url: "https://usebasin.com/f/fe80485df46c.json",
