added more skills icons, updated resume

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://drive.google.com/open?id=1Gly6TAHGFB3tpHGCmcn6GZFhZU1uqCDf">Resume</a>
+            <a class="nav-link js-scroll-trigger" href="https://drive.google.com/open?id=1dPHt9RFwVJoK8WoTz3WeO-TWmg969e2R">Resume</a>
           </li>
         </ul>
       </div>
@@ -196,76 +196,106 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-2 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="fa fa-4x devicon-angularjs-plain colored text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">Angular.js</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-2 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="fa fa-4x devicon-java-plain-wordmark text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">Java</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-2 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="fa fa-4x devicon-python-plain text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">Python</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-2 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="fa fa-4x devicon-nodejs-plain text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">Node js</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-2 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="fa fa-4x devicon-git-plain text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">GitHub</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-2 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="fa fa-4x devicon-javascript-plain text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">JavaScript</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-2 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="fa fa-4x devicon-html5-plain text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">HTML5</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-2 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="fa fa-4x devicon-css3-plain-wordmark text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">CSS</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-2 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="fa fa-4x devicon-mongodb-plain  text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">MongoDB</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-2 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="fa fa-4x devicon-express-original  text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">Express JS</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-2 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="fa fa-4x devicon-django-plain  text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">Django</h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="col-lg-2 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="fa fa-4x devicon-jquery-plain  text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">JQuery</h3>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="fa fa-4x devicon-amazonwebservices-original  text-primary mb-3 sr-icons"></i>
+            <h3 class="mb-3">AWS</h3>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="fa fa-4x devicon-backbonejs-plain-wordmark  text-primary mb-3 sr-icons"></i>
+            <h3 class="mb-3">Backbone js</h3>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="fa fa-4x devicon-nginx-original-wordmark  text-primary mb-3 sr-icons"></i>
+            <h3 class="mb-3">Nginx</h3>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="fa fa-4x devicon-mysql-plain  text-primary mb-3 sr-icons"></i>
+            <h3 class="mb-3">MySQL</h3>
+          </div>
+        </div>
+        <div class="col-lg-2 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="fa fa-4x devicon-bootstrap-plain  text-primary mb-3 sr-icons"></i>
+            <h3 class="mb-3">Bootstrap</h3>
           </div>
         </div>
       </div>
@@ -394,28 +424,34 @@
 
         <div class="row">
 
-          <div class="col-lg-3 mr-auto text-center">
+          <div class="col-lg-1 mr-auto text-center">
             <i class="fa devicon-facebook-plain fa-3x mb-3 sr-contact"></i>
             <p>
               <a href="https://www.facebook.com/vinson.aiono" class="text-light">facebook</a>
             </p>
           </div>
-          <div class="col-lg-3 mr-auto text-center">
+          <div class="col-lg-1 mr-auto text-center">
             <i class="fa devicon-github-plain fa-3x mb-3 sr-contact"></i>
             <p>
               <a href="https://github.com/vinsonlaiono" class="text-light">GitHub</a>
             </p>
           </div>
-          <div class="col-lg-3 mr-auto text-center">
+          <div class="col-lg-1 mr-auto text-center">
             <i class="fa fa-linkedin-square fa-3x mb-3 sr-contact"></i>
             <p>
               <a href="https://www.linkedin.com/in/vinsonaiono/" class="text-light">Linkedin</a>
             </p>
           </div>
-          <div class="col-lg-3 mr-auto text-center">
+          <div class="col-lg-1 mr-auto text-center">
             <i class="fa fa-envelope-square fa-3x mb-3 sr-contact"></i>
             <p>
               <a href="" class="text-light">Email</a>
+            </p>
+          </div>
+          <div class="col-lg-1 mr-auto text-center">
+            <i class="fa fa-file fa-3x mb-3 sr-contact"></i>
+            <p>
+              <a href="https://drive.google.com/open?id=1dPHt9RFwVJoK8WoTz3WeO-TWmg969e2R" class="text-light">Resume</a>
             </p>
           </div>
         </div>
