--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <img class="col-lg-12 col-md-12 col-sm-12 passion-img" style="border-radius: 20%; width: 21rem; height: 18rem" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t31.0-8/26220349_1430207323758846_2047746482154245479_o.jpg?_nc_cat=0&oh=71c1cb3534cba9c0e8c47dc01b362f35&oe=5BE2AE1B"
                   alt="">
               </div>
-              <div class="col-8">
+              <div class="col-8" id="aboutme">
                 <p class="text-faded mb-4" id="aboutme">I was born on a small island in the South Pacific and came to America to look for a better opportunity.
                    I grew up in San Jose, CA and worked for my father’s videography company. My position in the family business was to work with 
                    computer programs such as, Photoshop and XXX. It is through this experience that I developed a passion in technology and aspired 
@@ -204,7 +204,7 @@
                 </p>
                 <p  class="text-faded" id="aboutme">
                     I currently am in the process of completing my Computer Science degree at Utah Valley University. I returned to San Jose to attend 
-                    Coding Dojo where advanced my skills in the MEAN, Java, and Python stacks. I specialize in using these languages to create software
+                    Coding Dojo where I advanced my skills in the MEAN, Java, and Python stacks. I specialize in using these languages to create software
                     that caters to individuals, small-businesses, and enterprise level corporations. Knowing that there is no limit to the things that
                     I can create drives my passion for software engineering. I aspire to help bring other’s innovative ideas into reality, so let’s get to work.
                 </p>
