--- a/index.html
+++ b/index.html
@@ -101,12 +101,20 @@
           $('.bd-example-modal-lg').modal();
         }, 4500);
       }
-      if(x == "https://vinsonlaiono.github.io/portfolio/#portfolio"){
+      if(x == "https://vinsonlaiono.github.io/portfolio/#pairitup"){
         setTimeout(function () {
           window.location.href = "#portfolio"; //will redirect to your blog page (an ex: blog.html)
         }, 4000);
         setTimeout(function () {
-          $('.bd-example-modal-lg').modal();
+          $('.bs-example-modal-lg').modal();
+        }, 4500);
+      }
+      if(x == "https://vinsonlaiono.github.io/portfolio/#sekosevents"){
+        setTimeout(function () {
+          window.location.href = "#portfolio"; //will redirect to your blog page (an ex: blog.html)
+        }, 4000);
+        setTimeout(function () {
+          $('.bs-example-modal-lg-seko').modal();
         }, 4500);
       }
 
