updated to about me section with grammar

--- a/index.html
+++ b/index.html
@@ -214,13 +214,13 @@
             <div class="row">
 
               <div class="col-sm-12 col-lg-4">
-                <img class="col-lg-12 col-md-12 col-sm-12 passion-img" style="border-radius: 20%; width: 21rem; height: 18rem" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t31.0-8/26220349_1430207323758846_2047746482154245479_o.jpg?_nc_cat=0&oh=71c1cb3534cba9c0e8c47dc01b362f35&oe=5BE2AE1B"
+                <img class="col-lg-12 col-md-12 col-sm-12 passion-img" style="border-radius: 50%; width: 21rem; height: 18rem" src="https://scontent-sjc3-1.xx.fbcdn.net/v/t31.0-8/26220349_1430207323758846_2047746482154245479_o.jpg?_nc_cat=0&oh=71c1cb3534cba9c0e8c47dc01b362f35&oe=5BE2AE1B"
                   alt="">
               </div>
               <div class="col-8" id="aboutme">
                 <p class="text-faded mb-4" id="aboutme">I was born on a small island in the South Pacific and came to America to look for a better opportunity.
                    I grew up in San Jose, CA and worked for my father’s videography company. My position in the family business was to work with 
-                   computer programs such as, Photoshop and XXX. It is through this experience that I developed a passion in technology and aspired 
+                   computer programs such as Photoshop and Veegas pro. It is through this experience that I developed a passion for technology and aspire
                    to become a Software Engineer. Some of my other passions include traveling with my family, creating and playing music, and playing 
                    and watching basketball. 
                 </p>
@@ -249,7 +249,8 @@
     </div>
   </section>
 
-  <!-- <div class="parallax" id="pic1"></div> -->
+  <div class="parallax" id="pic1"></div>
+
   <section id="services">
     <div class="container">
       <div class="row">
