updated to about me section with grammar

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               <div class="col-8" id="aboutme">
                 <p class="text-faded mb-4" id="aboutme">I was born on a small island in the South Pacific and came to America to look for a better opportunity.
                    I grew up in San Jose, CA and worked for my father’s videography company. My position in the family business was to work with 
-                   computer programs such as Photoshop and Veegas pro. It is through this experience that I developed a passion for technology and aspire
+                   computer programs such as Photoshop and Vegas pro. It is through this experience that I developed a passion for technology and aspire
                    to become a Software Engineer. Some of my other passions include traveling with my family, creating and playing music, and playing 
                    and watching basketball. 
                 </p>
