minor changes to my work sections

--- a/index.html
+++ b/index.html
@@ -421,15 +421,24 @@
               <div class="modal-content p-1 m-0">
                 <!-- <img src="img/portfolio/fullsize/hoopfinder-1.PNG" alt=""> -->
                 <div class="portfolio-box-caption container-fluid p-0 my-2 p-3" style="background-color: #3f9cd0; color: white">
-                  <h1 class="text-center modal-header" id="hoopfinder">HoopFinder</h1>
-                  <img class="portfolio-box img-responsive block-center" src="https://media.giphy.com/media/3024NGmLUGvI0V5K0A/giphy.gif" alt="">
+                  <h1 class="text-center  " id="hoopfinder" style="display: inline-block">HoopFinder </h1>
+                  <span class="h4 float-right  "> <i class="fa fa-2x fa-trophy" style="color: gold"></i> 1st Place Hackathon winner </span>
+                  <hr>
+                  <video width="750" height="420" controls>
+                    <source src="./img/HoopFinder! - Google Chrome 8_9_2018 9_23_52 AM.mp4" type="video/mp4">
+                    <!-- <source src="movie.ogg" type="video/ogg"> -->
+                    Your browser does not support the video tag.
+                  </video>
+                  
+                  <!-- <img class="portfolio-box img-responsive block-center" id="gify" src="https://media.giphy.com/media/jILFa47Moh6DchoWzc/giphy.gif" alt="" style="height: 27rem"> -->
+                  <!-- <img class="portfolio-box img-responsive block-center" src="./img/portfolio/thumbnails/hoopfindergif.gif" alt=""> -->
                   <h6>A multifaceted web application that serves as a social media outlet for anyone interested in playing in
                     a local pickup game anywhere in the world; allows users to create court locations; invite others to play
                     at a specific time and place; add reviews of players, courts and pickup games; and provides live weather
                     conditions for the court location.
                   </h6>
                   <h6 class="text-black">
-                    <strong>Technologies</strong>: Python, Django, MySQL, Google maps API, Weather API, bootstrap, AWS, nginx
+                    <strong>Technologies</strong>: Python, Django, MySQL, Google maps API, Weather API, bootstrap, AWS, nginx, Less, Sass
                   </h6>
                   <a href=" https://github.com/vinsonlaiono/HoopFinder">
                     <i class="fa fa-4x devicon-github-original text-primary mb-3"></i>
@@ -462,7 +471,9 @@
                   <div class="modal-content p-1 m-0">
                     <!-- <img src="img/portfolio/fullsize/hoopfinder-1.PNG" alt=""> -->
                     <div class="portfolio-box-caption container-fluid p-0 my-2 p-3" style="background-color: #3f9cd0; color: white">
-                      <h1 class="modal-header">PairItUp</h1>
+                        <h1 class="text-center  " id="hoopfinder" style="display: inline-block">PairItUp </h1>
+                        <span class="h4 float-right  "> <i class="fa fa-2x fa-trophy" style="color: gold"></i> 1st Place MEAN Hackathon</span>
+                        <hr>
                       <img class=" portfolio-box img-responsive block-center" src="img/portfolio/pairitup.PNG" alt="">
                       <!-- <img style="height: 420px;" src="img/portfolio/pairitup.PNG" alt=""> -->
                       <h6>A web app that serves as a rebuild of google chat with an added code editor using the ace editor library.
