minor changes to my work sections for pair it up module

--- a/index.html
+++ b/index.html
@@ -474,7 +474,12 @@
                         <h1 class="text-center  " id="hoopfinder" style="display: inline-block">PairItUp </h1>
                         <span class="h4 float-right  "> <i class="fa fa-2x fa-trophy" style="color: gold"></i> 1st Place MEAN Hackathon</span>
                         <hr>
-                      <img class=" portfolio-box img-responsive block-center" src="img/portfolio/pairitup.PNG" alt="">
+                        <video width="750" height="420" controls>
+                            <source src="./img/PairItUp - Google Chrome 8_13_2018 5_21_06 PM.mp4" type="video/mp4">
+                            <!-- <source src="movie.ogg" type="video/ogg"> -->
+                            Your browser does not support the video tag.
+                          </video>
+                      <!-- <img class=" portfolio-box img-responsive block-center" src="img/portfolio/pairitup.PNG" alt=""> -->
                       <!-- <img style="height: 420px;" src="img/portfolio/pairitup.PNG" alt=""> -->
                       <h6>A web app that serves as a rebuild of google chat with an added code editor using the ace editor library.
                         Creates a room using sockets to create a space where two or more coders can edit the same HTML file.
