minor changes to my work sections for pair it up module

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       if (x == "https://vinsonlaiono.github.io/portfolio/#hoopfinder") {
         setTimeout(function () {
           $('#jsScroll').trigger('click'); 
-        }, 4000);
+        }, 3500);
         setTimeout(function () {
           $('.bd-example-modal-lg').modal();
         }, 4500);
@@ -104,7 +104,7 @@
       if (x == "https://vinsonlaiono.github.io/portfolio/#pairitup") {
         setTimeout(function () {
           $('#jsScroll').trigger('click'); 
-        }, 4000);
+        }, 3500);
         setTimeout(function () {
           $('.bs-example-modal-lg').modal();
         }, 4500);
@@ -112,7 +112,7 @@
       if (x == "https://vinsonlaiono.github.io/portfolio/#sekosevents") {
         setTimeout(function () {
           $('#jsScroll').trigger('click'); 
-        }, 4000);
+        }, 3500);
         setTimeout(function () {
           $('.bs-example-modal-lg-seko').modal();
         }, 4500);
@@ -475,7 +475,7 @@
                         <span class="h4 float-right  "> <i class="fa fa-2x fa-trophy" style="color: gold"></i> 1st Place MEAN Hackathon</span>
                         <hr>
                         <video width="750" height="420" controls>
-                            <source src="./img/PairItUp - Google Chrome 8_13_2018 5_21_06 PM.mp4" type="video/mp4">
+                            <source src="./img/PairItUpDemo.mp4" type="video/mp4">
                             <!-- <source src="movie.ogg" type="video/ogg"> -->
                             Your browser does not support the video tag.
                           </video>
