added java demo video

--- a/index.html
+++ b/index.html
@@ -517,8 +517,14 @@
                   <div class="modal-content p-1 m-0">
                     <!-- <img src="img/portfolio/fullsize/hoopfinder-1.PNG" alt=""> -->
                     <div class="portfolio-box-caption container-fluid p-0 my-2 p-3" style="background-color: #3f9cd0; color: white">
-                      <h1 class="card-header">Seko's Events Decore!</h1>
-                      <img class=" portfolio-box img-responsive block-center" style="height: 420px;" src="img/portfolio/fullsize/seko-2.PNG" alt="">
+                      <h1 class="text-center  " id="hoopfinder" style="display: inline-block">Seko's Events Decor</h1>
+                      <span class="h4 float-right  "> <i class="fa fa-2x fa-trophy" style="color: gold"></i> 1st Place MEAN Hackathon</span>
+                      <hr>
+                      <video width="750" height="420" controls>
+                          <source src="./img/Java - Google Chrome 8_15_2018 1_33_03 PM.mp4" type="video/mp4">
+                          <!-- <source src="movie.ogg" type="video/ogg"> -->
+                          Your browser does not support the video tag.
+                        </video>
 
                       <h6>A Wedding Decor Eccomerse site. Functionality includes shopping cart. Filtering for products and categories
                       </h6>
