added java demo video

--- a/index.html
+++ b/index.html
@@ -517,8 +517,7 @@
                   <div class="modal-content p-1 m-0">
                     <!-- <img src="img/portfolio/fullsize/hoopfinder-1.PNG" alt=""> -->
                     <div class="portfolio-box-caption container-fluid p-0 my-2 p-3" style="background-color: #3f9cd0; color: white">
-                      <h1 class="text-center  " id="hoopfinder" style="display: inline-block">Seko's Events Decor</h1>
-                      <span class="h4 float-right  "> <i class="fa fa-2x fa-trophy" style="color: gold"></i> 1st Place MEAN Hackathon</span>
+                      <h1 class="text-center" id="hoopfinder" style="display: inline-block">Seko's Events Decor</h1>
                       <hr>
                       <video width="750" height="420" controls>
                           <source src="./img/Java - Google Chrome 8_15_2018 1_33_03 PM.mp4" type="video/mp4">
@@ -526,10 +525,10 @@
                           Your browser does not support the video tag.
                         </video>
 
-                      <h6>A Wedding Decor Eccomerse site. Functionality includes shopping cart. Filtering for products and categories
+                      <h6>Ecommerce site for wedding decorations. With the ability to login create a cart and checkout out your cart for purchase; Admin page to show data of users; add new products.
                       </h6>
                       <h6>
-                        <strong>Technologies</strong>: Java, JavaSpringBoot, MySQL, Bootstrap, Sass, Less
+                        <strong>Technologies</strong>: Java, JavaSpringBoot, MySQL, Bootstrap, Sass, Less, HTML, CSS
                       </h6>
                       <a href=" https://github.com/vinsonlaiono/sekosevents">
                         <i class="fa fa-4x devicon-github-original text-primary mb-3"></i>
